# todoAPI

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
backend/: setup.cfg
backend/core/: settings.py  urls.py
backend/todos/: admin.py  models.py  tests.py  urls.py
backend/todos/migrations/: 0001_initial.py
frontend/: package-lock.json
frontend/src/: App.js
