[tool.poetry]
name = "todoapi"
version = "0.1.0"
description = "todo app created on Django and React to test APIs"
authors = ["Piwero <piwero@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.3"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.8"
black = "^21.5b1"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
